# phisherman.py

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  README.md  dev-requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/workflows/: Lint Files.yml  flake8-lint.yml
code-reference/: index.html
docs/: code-reference.md  index.md  installation.md
installation/: index.html
phisherman/: __init__.py  app.py  errors.py  exceptions.py  models.py  route.py
phisherman/utils/: metaclasses.py
search/: search_index.json
workflow-reference/: index.html
