[tool.poetry]
name = "phisherman.py"
version = "0.1.1"
description = "Async API Wrapper for Phisherman.gg in Python"
authors = ["Vedrecide <you@example.com>"]
repository = "https://github.com/QristaLabs/phisherman.py"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
readme = "README.md"
license = "MIT"
packages = [
    { include = "phisherman" },
    { include = "phisherman/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.3"
mkdocstrings = "^0.17.0"
pytkdocs = {extras = ["numpy-style"], version = "^0.15.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
