[tool.poetry]
name = "phisherman.py"
version = "1.0.0"
description = "Async API Wrapper for Phisherman.gg in Python"

authors = ["Vedrecide <you@example.com>"]
repository = "https://github.com/QristaLabs/phisherman.py"

readme = "README.md"
license = "MIT"

packages = [
    { include = "phisherman" },
    { include = "phisherman/**/*.py" },
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
taskipy = "^1.9.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"
mkdocstrings = "^0.18.1"
pytkdocs = {extras = ["numpy-style"], version = "^0.16.1"}
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
flake8-annotations = "^2.7.0"
flake8-bugbear = "^22.12.6"
flake8-import-order = "^0.18.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
precommit = "pre-commit install"
lint = "pre-commit run --all-files"
